# snowflake-mcp-server

./: .gitignore  Claude.md  DEVELOPER.md  LICENSE  README.md  pyproject.toml  python_guideline.md
src/snowflake_mcp/: __main__.py  connection.py  server.py
src/snowflake_mcp_server/: __init__.py  __main__.py  connection.py  query_validator.py  server.py
tests/: test_connection.py  test_query_validator.py  test_server.py
